--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">tareaconstraintlayout</string>
+    <string name="Label_Email">Añade tu email</string>
+    <string name="Label_Password">Añade la contraseña</string>
+    <string name="Label_btn_login">Iniciar sesión</string>
 </resources>
